--- a/M5-BOOTSTRAP/M1/css/style2.css
+++ b/M5-BOOTSTRAP/M1/css/style2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -12,25 +14,30 @@ h1 {
     text-align: center;
     margin-bottom: 1rem;
     font-weight: 700;
-    color: #3957f1;
+    color: #0a2ff1;
     font-size: calc(3em + 0.1vw);
 }
 
-p {
+p,
+h2 {
     width: 100%;
     font-size: 1.75rem;
     font-weight: 400;
     text-align: center;
     padding: 0.5rem;
     color: white;
+    font-size: calc(1em + 1vw);
+}
+
+h2 {
+    font-size: calc(1.5em + 1vw);
+    font-weight: 700;
+    transform: translate(0%, 20%)
 }
 
 .caja {
-
     width: 75%;
-
     margin: 2rem auto;
-
 }
 
 
@@ -39,12 +46,10 @@ p {
     width: 100%;
     height: 100%;
     object-fit: contain;
-
 }
 
 .cuadro {
     position: relative;
-
 }
 
 .cuadro div {
@@ -55,8 +60,12 @@ p {
     transform: translate(-50%, 0%);
 }
 
-/* @media (min-width: 768px) {
-
+@media (min-width: 768px) {
+    h2 {
+        padding: 0;
+        font-size: calc(1em + 1.3vw);
+        transform: translate(0%, 20%)
+    }
 
     .caja {
         width: 40%;
@@ -64,27 +73,31 @@ p {
     }
 
     section {
-
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
         flex-direction: unset;
         gap: 1.25rem;
-
     }
 
-
+    p {
+        font-size: calc(1em + 0.5vw);
+    }
 }
 
 @media (min-width: 992px) {
+    h2 {
+        padding: 0;
+        font-size: calc(0.2em + 1.5vw);
+        transform: translate(0%, 20%)
+    }
+
     p {
-        font-size: calc(1em + 0.1vw);
+        font-size: calc(0.6em + 0.5vw);
     }
 
     .caja {
         width: 20%;
         margin: 0;
     }
-
-
-} */
+}
